fix weird wrapping on menu titles

--- a/css/_caw_styles.scss
+++ b/css/_caw_styles.scss
@@ -271,6 +271,7 @@ body, .header, .site-main-menu, .main {
   padding: 0px 20px;
   font-weight: 400;
   letter-spacing: 0.02em;
+  display: block;
 }
 .sidebar .block-menu h2 a:hover,
 .sidebar .block-menu h2 a:focus,
